Change route names for clearer navigation

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Natalia's Resume</title>
+    <title>nataliaCodes - welcome!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
